CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3 FATAL_ERROR)

PROJECT(ROMAN_NUMERALS)

SET(LIBRARY_OUTPUT_PATH ${ROMAN_NUMERALS_BINARY_DIR}/bin CACHE PATH
  "Single directory to build all library files"
)
SET(EXECUTABLE_OUTPUT_PATH ${ROMAN_NUMERALS_BINARY_DIR}/bin CACHE PATH
  "Single directory to build all executable files"
)
MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)

OPTION(BUILD_SHARED_LIBS "Build with shared libraries" ON)

IF(ROMAN_NUMERALS_BUILD_TEST)
  FIND_PACKAGE(GTest)
  INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
ENDIF(ROMAN_NUMERALS_BUILD_TEST)
OPTION(ROMAN_NUMERALS_BUILD_TEST "Build tests" ON)
ENABLE_TESTING()

INCLUDE_DIRECTORIES(main)
INCLUDE_DIRECTORIES(test)

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)
