INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(TESTS
)

IF(ROMAN_NUMERALS_BUILD_TESTS)
  FIND_PACKAGE(GTest REQUIRED)

  FOREACH(TEST IN LISTS TESTS)
    ADD_EXECUTABLE(${TEST} ${TEST}.cxx)
    TARGET_LINK_LIBRARIES (${TEST} ${GTEST_BOTH_LIBRARIES})
    GTEST_ADD_TESTS (${CMAKE_BINARY_DIR}/bin/${TEST} "" ${TEST}.cxx)
  ENDFOREACH(TEST IN LISTS TESTS)

  FILE(COPY Data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ENDIF(ROMAN_NUMERALS_BUILD_TESTS)
