INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(TESTS
)

IF(ROMAN_NUMERALS_BUILD_TEST)
  FIND_PACKAGE(GTest REQUIRED)

  FOREACH(TEST IN LISTS TESTS)
    ADD_EXECUTABLE(${TEST} ${TEST}.cpp)
    TARGET_LINK_LIBRARIES (${TEST} ${GTEST_BOTH_LIBRARIES})
    GTEST_ADD_TESTS (${CMAKE_BINARY_DIR}/bin/${TEST} "" ${TEST}.cpp)
  ENDFOREACH(TEST IN LISTS TESTS)
ENDIF(ROMAN_NUMERALS_BUILD_TEST)
